--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven { url "https://jitpack.io" }
+        maven { url "https://raw.githubusercontent.com/Pgyer/mvn_repo_pgyer/master" }
+        maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
         jcenter()
     }
 }
